<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="KqV-Wp-d5f">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Items-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ItemListViewController" customModule="GroceryListExample" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fd5-1a-upq">
                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                <connections>
                                    <segue destination="NKG-C2-ip3" kind="embed" id="DLF-YG-fib"/>
                                </connections>
                            </containerView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="Fd5-1a-upq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="GkJ-hr-Ru1"/>
                            <constraint firstItem="Fd5-1a-upq" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="JLg-Se-kcf"/>
                            <constraint firstItem="Fd5-1a-upq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Sag-oL-ks1"/>
                            <constraint firstItem="Fd5-1a-upq" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="U77-lv-vB0"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Items" id="ABN-XS-bXf">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="77K-O9-fWH"/>
                    </navigationItem>
                    <connections>
                        <outlet property="createItemButton" destination="77K-O9-fWH" id="Du0-Wi-oy0"/>
                        <segue destination="k5V-Db-SGN" kind="show" identifier="CreateItem" id="tAc-GB-yZh"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
        </scene>
        <!--Edit Item-->
        <scene sceneID="k97-6H-lLN">
            <objects>
                <viewController id="k5V-Db-SGN" customClass="ItemEditViewController" customModule="GroceryListExample" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8CT-WZ-Abi">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Value" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oz9-1M-7FL">
                                <rect key="frame" x="16" y="72" width="343" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="valueLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FC2-SZ-gqB">
                                <rect key="frame" x="16" y="101" width="343" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="valueText"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="qj5-AS-gmb"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstItem="FC2-SZ-gqB" firstAttribute="top" secondItem="Oz9-1M-7FL" secondAttribute="bottom" constant="8" id="7q1-PM-ny7"/>
                            <constraint firstItem="FC2-SZ-gqB" firstAttribute="leading" secondItem="FtA-wv-YsT" secondAttribute="leading" constant="16" id="Twh-6e-kxC"/>
                            <constraint firstItem="Oz9-1M-7FL" firstAttribute="leading" secondItem="FtA-wv-YsT" secondAttribute="leading" constant="16" id="YzB-FM-RnD"/>
                            <constraint firstItem="FtA-wv-YsT" firstAttribute="trailing" secondItem="FC2-SZ-gqB" secondAttribute="trailing" constant="16" id="h8s-99-ZWe"/>
                            <constraint firstItem="Oz9-1M-7FL" firstAttribute="top" secondItem="FtA-wv-YsT" secondAttribute="top" constant="8" id="lKC-OL-NS6"/>
                            <constraint firstItem="FtA-wv-YsT" firstAttribute="trailing" secondItem="Oz9-1M-7FL" secondAttribute="trailing" constant="16" id="nVm-Nr-CVx"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="FtA-wv-YsT"/>
                    </view>
                    <navigationItem key="navigationItem" title="Edit Item" id="sr2-NL-jDH">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="Ryf-6e-Qj6"/>
                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="WcK-xy-wUy"/>
                    </navigationItem>
                    <connections>
                        <outlet property="cancelButton" destination="Ryf-6e-Qj6" id="sqV-Mb-6HU"/>
                        <outlet property="doneButton" destination="WcK-xy-wUy" id="OtX-5b-gLh"/>
                        <outlet property="valueText" destination="FC2-SZ-gqB" id="xjZ-NS-Thc"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="sfY-ob-qDP" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="144" y="879"/>
        </scene>
        <!--Item Table View Controller-->
        <scene sceneID="iup-qj-dFp">
            <objects>
                <tableViewController id="NKG-C2-ip3" customClass="ItemTableViewController" customModule="GroceryListExample" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="W8L-5f-5D7">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ItemCell" textLabel="RhI-7B-Exw" style="IBUITableViewCellStyleDefault" id="Xvf-lL-AuJ">
                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Xvf-lL-AuJ" id="YsK-Fa-dTj">
                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="RhI-7B-Exw">
                                            <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                    </subviews>
                                </tableViewCellContentView>
                            </tableViewCell>
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="NKG-C2-ip3" id="Lk5-aH-RYO"/>
                            <outlet property="delegate" destination="NKG-C2-ip3" id="YF5-hc-PPG"/>
                        </connections>
                    </tableView>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="42N-Wk-01b" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="911" y="133"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="rGl-e3-xmH">
            <objects>
                <navigationController id="KqV-Wp-d5f" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="I1S-Fk-bJ5">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="LYI-eg-gKg"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="qVj-Ab-wGp" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-902" y="134"/>
        </scene>
    </scenes>
</document>
